port r55189 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-13-branch@55190 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2686,8 +2686,8 @@ building vignettes needs @command{tex} and @command{latex}, or
 manuals (including the @R{} reference manual) and vignettes is sensitive
 to the version of the @LaTeX{} package @pkg{hyperref} and we recommend
 that the @TeX{} distribution used is keep up-to-date.  A number of
-@LaTeX{} packages are required (including @pkg{url.sty}) and others such
-as @pkg{hyperref} are desirable.
+@LaTeX{} packages are required (including @pkg{url.sty}, and
+@pkg{listings.sty}) and others such as @pkg{hyperref} are desirable.
 
 
 If you want to build from the R Subversion repository you need both
