--- a/po/RGui-ja.po
+++ b/po/RGui-ja.po
@@ -5,17 +5,17 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: R 2.1.1 \n"
+"Project-Id-Version: R 2.1.1\n"
 "Report-Msgid-Bugs-To: bugs@R-project.org\n"
 "POT-Creation-Date: 2011-03-29 21:49+0100\n"
-"PO-Revision-Date: 2010-09-29 06:37+0900 \n"
-"Last-Translator: Masafumi OKADA <mokada@mail.ne.jp> \n"
-"Language-Team: R-core <R-core@R-project.org> \n"
+"PO-Revision-Date: 2011-03-25 08:30+0900\n"
+"Last-Translator: Masahiro Hayashi <mh@m884.jp>\n"
+"Language-Team: R-core <R-core@R-project.org>\n"
 "Language: \n"
-"MIME-Version: 1.0 \n"
-"Content-Type: text/plain; charset=UTF-8 \n"
-"Content-Transfer-Encoding: 8bit \n"
-"X-Generator: Pootle 1.1.0 \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Pootle 1.1.0\n"
 
 #: console.c:1157 console.c:1199
 msgid "Not enough memory"
@@ -359,7 +359,7 @@ msgstr " ペースト \tCTRL+V "
 
 #: dataentry.c:1800
 msgid "Delete\tDEL"
-msgstr " 消去 tDEL "
+msgstr " 消去 \tDel"
 
 #: dataentry.c:1803
 msgid "Cell widths ..."
@@ -1030,7 +1030,7 @@ msgstr " PDF ファイル "
 
 #: ../library/grDevices/src/devWindows.c:934
 msgid "Enhanced metafiles"
-msgstr " Enhanced metafiles "
+msgstr "拡張メタファイル"
 
 #: ../library/grDevices/src/devWindows.c:937
 #: ../library/grDevices/src/devWindows.c:3396
@@ -1096,11 +1096,11 @@ msgstr " クリップボードにコピー "
 
 #: ../library/grDevices/src/devWindows.c:1589
 msgid "as a Bitmap\tCTRL+C"
-msgstr " ビットマップtCTRL+C　として "
+msgstr " ビットマップとして\tCTRL+C"
 
 #: ../library/grDevices/src/devWindows.c:1590
 msgid "as a Metafile\tCTRL+W"
-msgstr " メタファイルtCTRL+W　として "
+msgstr " メタファイルとして\tCTRL+W"
 
 #: ../library/grDevices/src/devWindows.c:1593
 msgid "Print...\tCTRL+P"
